--- a/hydrogen_core/base/CMakeLists.txt
+++ b/hydrogen_core/base/CMakeLists.txt
@@ -4,6 +4,8 @@ project(hydrogencore C CXX)
 find_package(Nova)
 add_library(${PROJECT_NAME} OBJECT "")
 
+include_directories(../property)
+
 include(CPack)
 
 set(CMAKE_CXX_STANDARD 20)
