--- a/hydrogen_core/CMakeLists.txt
+++ b/hydrogen_core/CMakeLists.txt
@@ -8,7 +8,8 @@ add_subdirectory(base)
 include_directories(.)
 include_directories(base)
 include_directories(property)
-include_directories(utils)
+include_directories(util)
+include_directories(locale)
 
 # Sources
 list(APPEND ${PROJECT_NAME}_SOURCES
